Fixed broken link to logo img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<h1> Genser </h1>
 			</td>
 			<td width="30%" height="100%">
-				<img source="/EG_logo_Square.png" width="30%" height="30%">
+				<img src="https://raw.githubusercontent.com/Ethan-Genser/Ethan-Genser.github.io/master/Images/EG_logo_Square.png">
 			</td>
 	</body>
 </html>
