Added headers and subtitle

--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html>
 	<head>
 		<title> Ethan Genser </title>
+		<link rel="stylesheet" href="stylesheet.css">
 	</head>
 	<body>
-        <table width="100%" height="100%">
-			<td width="70%" height="100%">
-				<h1> Ethan </h1>
-				<h1> Genser </h1>
+        <table class="page-table">
+		
+			<!-- Left Collumn -->
+			<td class="page-cell" id="left-collumn">
+				<p class="name"> Ethan </p>
+				<p class="name"> Genser </p>
+				<p class="subtitle"> Computer Science Student and Enthusiast </p>
+				<p class="header"> About </p>
+				<p class="header"> Goals </p>
+				<p class="header"> Experience </p>
 			</td>
-			<td width="30%" height="100%">
-				<img src="https://raw.githubusercontent.com/Ethan-Genser/Ethan-Genser.github.io/master/Images/EG_logo_Square.png">
+			
+			<!-- Right Collumn -->
+			<td class="page-cell" id="right-collumn">
+				<img src="Images/EG_logo_Square.png">
 			</td>
 	</body>
 </html>
