Reintegrated folder system

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title> Ethan Genser </title>
-		<link rel="stylesheet" href="https://raw.githubusercontent.com/Ethan-Genser/Ethan-Genser.github.io/master/Resources/Stylesheets/stylesheet.css">
+		<link rel="stylesheet" href="css/stylesheet.css">
 	</head>
 	<body>
         <table class="page-table">
@@ -19,7 +19,7 @@
 
 		<!-- Right Collumn -->
 		<td class="page-cell" id="right-collumn">
-			<img src="https://raw.githubusercontent.com/Ethan-Genser/Ethan-Genser.github.io/master/Resources/Images/EG_logo_Square.png">
+			<img src="images/EG_logo_Square.png">
 		</td>
 	</body>
 </html>
