--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 		<title> Ethan Genser </title>
 		<meta charset = "UTF-8">
 		<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o||n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({1:[function(e,n,t){function r(){}function o(e,n,t){return function(){return i(e,[c.now()].concat(u(arguments)),n?null:this,t),n?void 0:this}}var i=e("handle"),a=e(2),u=e(3),f=e("ee").get("tracer"),c=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,n){s[n]=o(d+n,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,o="function"==typeof n;return i(l+"tracer",[c.now(),e,t],r),function(){if(f.emit((o?"":"no-")+"fn-start",[c.now(),r,o],t),o)try{return n.apply(this,arguments)}finally{f.emit("fn-end",[c.now()],t)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=o(l+n)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,c.now()])}},{}],2:[function(e,n,t){function r(e,n){var t=[],r="",i=0;for(r in e)o.call(e,r)&&(t[i]=n(r,e[r]),i+=1);return t}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],3:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(o<0?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=r},{}],4:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function o(e){function n(e){return e&&e instanceof r?e:e?f(e,u,i):i()}function t(t,r,o,i){if(!d.aborted||i){e&&e(t,r,o);for(var a=n(o),u=m(t),f=u.length,c=0;c<f;c++)u[c].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function l(e,n){v[e]=m(e).concat(n)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(t)}function g(e,n){c(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var v={},y={},b={on:l,emit:t,get:w,listeners:m,context:n,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",f=e("gos"),c=e(2),s={},p={},d=n.exports=o();d.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(o.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[n]=r,r}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){o.buffer([e],r),o.emit(e,n,t)}var o=e("ee").get("handle");n.exports=r,r.ee=o},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=h.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();c(y,function(n,t){e[n]||(e[n]=t)}),f("mark",["onload",a()+h.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function o(){"complete"===d.readyState&&i()}function i(){f("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),f=e("handle"),c=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,SI:p.setImmediate,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1044.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=n.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),f("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","queueTime":0,"licenseKey":"5c532d628b","agent":"","transactionName":"ZgRWZ0tRXBJXBhINVl9OckZXU0YIWQtJB1ZVBFxAVFUcDF8BAghcRgBGVgNjRwNSCgsFUF8sXVddXFcWVxcDSklDDldWSkNtE1MUEwFKRQ==","applicationID":"2416009","errorBeacon":"bam.nr-data.net","applicationTime":31}</script>
-		<meta name = "Description" content = "My first webpage!">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script type="text/javascript">$(document).ready(function(){$("a").on('click',function(event){if(this.hash !==""){event.preventDefault();var hash = this.hash;$('html, body').animate({scrollTop: $(hash).offset().top},800,function(){window.location.hash=hash;});}});});</script>
+		<meta name = "Description" content = "Ethan Genser's personal webpage.">
 		<meta name = "Author" content = "Ethan P. Genser">
 		<meta name = "Viewport" content = "width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/stylesheet.css">
 	</head>
 	<body>
+		<a href="#about-anchor"> <img class="nav-button" src="images/About_button.png"> </a>
+		<a href="#goals-anchor"> <img class="nav-button" src="images/Goals_button.png"> </a>
+		<a href="#experience-anchor"> <img class="nav-button" src="images/Experience_button.png"> </a>
+		<a href="#contact-anchor"> <img class="nav-button" src="images/Contact_button.png"> </a>
 		<table id="title-table">
 			<!-- Left Collumn Title -->
 			<td id="name-cell">
@@ -24,9 +30,11 @@
 				<img id="logo" src="images/EG_logo_Square.png">
 			</td>
 		</table>
+		<div id="transition"></div>
         <table class="page-table">
 			<!-- Left Collumn -->
 			<td class="page-cell" id="left-collumn">
+				<a id="about-anchor"></a>
 				<p class="header"> About </p>
 				<p class="body-text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat orci eget erat ultrices ultrices. Duis dictum, arcu eget interdum
@@ -43,6 +51,7 @@
 					sit amet tincidunt faucibus, urna mi placerat libero, sed bibendum nunc tortor eget nulla. Suspendisse purus quam, dapibus luctus placerat
 					consequat, fermentum et eros. In hac habitasse platea dictumst. Cras et odio eget sem blandit ornare.
 				</p>
+				<a id="goals-anchor"></a>
 				<p class="header"> Goals </p>
 				<p class="body-text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat orci eget erat ultrices ultrices. Duis dictum, arcu eget interdum
@@ -59,6 +68,7 @@
 					sit amet tincidunt faucibus, urna mi placerat libero, sed bibendum nunc tortor eget nulla. Suspendisse purus quam, dapibus luctus placerat
 					consequat, fermentum et eros. In hac habitasse platea dictumst. Cras et odio eget sem blandit ornare.
 				</p>
+				<a id="experience-anchor"></a>
 				<p class="header"> Experience </p>
 				<p class="body-text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat orci eget erat ultrices ultrices. Duis dictum, arcu eget interdum
@@ -75,6 +85,7 @@
 					sit amet tincidunt faucibus, urna mi placerat libero, sed bibendum nunc tortor eget nulla. Suspendisse purus quam, dapibus luctus placerat
 					consequat, fermentum et eros. In hac habitasse platea dictumst. Cras et odio eget sem blandit ornare.
 				</p>
+				<a id="contact-anchor"></a>
 				<p class="header"> Contact </p>
 				<p class="contact-info"> Email: <a href="mailto:ethanp3@cox.net" target="_top">ethanp3@cox.net</a> </p>
 				<p class="contact-info"> Phone: (479) 250-5389 </p>
