--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta name = "Author" content = "Ethan P. Genser">
 		<meta name = "Viewport" content = "width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/stylesheet.css">
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
+		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
 	</head>
 	<body>
 		<a href="#about-anchor"> <img class="nav-button" src="images/About_button.png"> </a>
