Rehauls the home page's apearance and layout

--- a/index.html
+++ b/index.html
@@ -9,11 +9,22 @@
 		<meta name = "Description" content = "Ethan Genser's personal webpage.">
 		<meta name = "Author" content = "Ethan P. Genser">
 		<meta name = "Viewport" content = "width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/stylesheet.css">
+		<link rel="stylesheet" href="stylesheet.css">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon"/>
 	</head>
 	<body>
-		
+		<div id="greeting">
+			<h1 class="glow" id="ethan-genser"> Ethan Genser </h1>
+			<h3 id="description"> Student / Software Developer </h3> 
+		</div>
+		<div id="nav-bar">
+			<span id="nav-buttons">
+				<a class="nav-button" id="home" href="">Home</a>
+				<a class="nav-button" href="">About</a>
+				<a class="nav-button" href="">Projects</a>
+				<a class="nav-button" href="">Contact</a>
+			</span>
+		</div>
 	</body>
 </html>
