--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<p class="project-data">This is a Python script that allows the user to hide a secret image inside of a cover image. Later, the user can then use the program to reverse the encoding and regain an aproximate copy of the original.</p>
 				</div>
 				<div class="column">
-					<p class="project-data">This program proceduraly generates mazes using a recursive backtracking algorithm. It is written in C++11 and structured in an object oriented manner.</p>
+					<p class="project-data">This program proceduraly generates mazes using a recursive backtracking algorithm. It is written in C++ and structured in an object oriented manner.</p>
 				</div>
 			</div>
 			<div class="row">
