Improved viewing experience on mobile devices

--- a/index.html
+++ b/index.html
@@ -50,32 +50,24 @@
 			<div class="row">
 				<div class="column">
 					<a class="project-link" href="https://ethan-genser.github.io/Steganography/"><p>Steganography</p></a>
-				</div>
-				<div class="column">
-					<a class="project-link" href="https://ethan-genser.github.io/Maze_Generator/"><p>Maze Generator</p></a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="column">
+					<br>
 					<p class="project-data">This is a Python script that allows the user to hide a secret image inside of a cover image. Later, the user can then use the program to reverse the encoding and regain an aproximate copy of the original.</p>
 				</div>
 				<div class="column">
+					<a class="project-link" href="https://ethan-genser.github.io/Maze_Generator/"><p>Maze Generator</p></a>
+					<br>
 					<p class="project-data">This program proceduraly generates mazes using a recursive backtracking algorithm. It is written in C++11 and structured in an object oriented manner.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="column">
 					<a class="project-link" href="https://ethan-genser.github.io/CDC_Data_Analysis/"><p>CDC Data Visualizer</p></a>
-				</div>
-				<div class="column">
-					<a class="project-link" href="https://ethan-genser.github.io/Conways_Game_Of_Life/"><p>Conway's Game of Life</p></a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="column">
+					<br>
 					<p class="project-data">This short python program takes specialy formatted datasets from the Center for Disease Control and Prevention's website as input and outputs a xlsx file. The output file organizes the data into tables and creates a graphical chart to help visualize the information.</p>
 				</div>
 				<div class="column">
+					<a class="project-link" href="https://ethan-genser.github.io/Conways_Game_Of_Life/"><p>Conway's Game of Life</p></a>
+					<br>
 					<p class="project-data">This is a model of John Conway's 'Game of Life'. The simulation is built in C# using Microsoft XNA as the framework and the Monogame Content Pipeline for a graphical interface.</p>
 				</div>
 			</div>
@@ -83,11 +75,12 @@
 
 		<!-- Contact -->
 		<div id="contact-anchor">
-			<h1 class="header" id="contact-header">Contact</h1>>
-			<a id="git" href="https://github.com/Ethan-Genser"><img class="contact-button" src="images/GitHub_logo.png"></a>
-			<a id="google" href="https://plus.google.com/u/0/111515272302994905514"><img class="contact-button" src="images/Google_logo.png"></a>
-			<a id="mail" href="mailto:ethanp1033@gmail.com?Subject=Empty%20Subject" target="_top"><img class="contact-button" src="images/Mail_logo.png"></a>
-			<br>
+			<h1 class="header" id="contact-header">Contact</h1>
+			<div id="contact-buttons">
+				<a href="https://github.com/Ethan-Genser"><img class="contact-button" id="git" src="images/GitHub_logo.png"></a>
+				<a href="https://plus.google.com/u/0/111515272302994905514"><img class="contact-button" id="google" src="images/Google_logo.png"></a>
+				<a href="mailto:ethanp1033@gmail.com?Subject=Empty%20Subject" target="_top"><img class="contact-button" id="mail" src="images/Mail_logo.png"></a>
+			</div>
 		</div>
 	</body>
 </html>
