Added Linkedin contact and normalized contact logos

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 		<div id="contact-anchor">
 			<h1 class="header" id="contact-header">Contact</h1>
 			<div id="contact-buttons">
-				<a href="https://github.com/Ethan-Genser"><img class="contact-button" id="git" src="images/GitHub_logo.png"></a>
-				<a href="https://plus.google.com/u/0/111515272302994905514"><img class="contact-button" id="google" src="images/Google_logo.png"></a>
+				<a href="https://github.com/Ethan-Genser"><img class="contact-button" src="images/GitHub_logo.png"></a>
+				<a href="https://www.linkedin.com/in/ethan-genser-48597916a/"><img class="contact-button" src="images/Linkedin_logo.png"></a>
+				<a href="https://plus.google.com/u/0/111515272302994905514"><img class="contact-button" src="images/Google_logo.png"></a>
 				<a href="mailto:ethanp1033@gmail.com?Subject=Empty%20Subject" target="_top"><img class="contact-button" id="mail" src="images/Mail_logo.png"></a>
 			</div>
 		</div>
