--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p class="paragraph-data">I'm not very good at talking about myself, so I will now invite you take a look at some of my personal projects below and see what you think.</p>
 				</div>
 				<div class="column">
-					 <img id="profile-pic" src="images/placeholder.png">
+					 <img id="profile-pic" src="images/me.jpg">
 				</div>
 			</div>
 		</div>
