Corrected typos in the projects' descriptions

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 			<h1 class="header glow" id="projects-header">My Projects</h1>
 			<div class="row">
 				<div class="column">
-					<a class="project-link" href="https://ethan-genser.github.io/Steganography/"><p>Steganography</p></a>
+					<a class="project-link" href="https://ethan-genser.github.io/Steganography/"><p>Steganographic Encoder</p></a>
 					<br>
-					<p class="project-data">This is a Python script that allows the user to hide a secret image inside of a cover image. Later, the user can then use the program to reverse the encoding and regain an aproximate copy of the original.</p>
+					<p class="project-data">This is a Python script that allows the user to hide a secret image inside of a cover image. Later, the user can then use the program to reverse the encoding and regain an approximate copy of the original.</p>
 				</div>
 				<div class="column">
 					<a class="project-link" href="https://ethan-genser.github.io/Maze_Generator/"><p>Maze Generator</p></a>
 					<br>
-					<p class="project-data">This program proceduraly generates mazes using a recursive backtracking algorithm. It is written in C++ and structured in an object oriented manner.</p>
+					<p class="project-data">This program procedurally generates mazes using a recursive backtracking algorithm. It is written in C++ and structured in an object-oriented manner.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="column">
-					<a class="project-link" href="https://ethan-genser.github.io/CDC_Data_Analysis/"><p>CDC Data Visualizer</p></a>
+					<a class="project-link" href="https://ethan-genser.github.io/CDC_Data_Analysis/"><p>Cause of Death Data Visualization Tool</p></a>
 					<br>
-					<p class="project-data">This short python program takes specialy formatted datasets from the Center for Disease Control and Prevention's website as input and outputs a xlsx file. The output file organizes the data into tables and creates a graphical chart to help visualize the information.</p>
+					<p class="project-data">This short python program takes specially formatted datasets from the Center for Disease Control and Prevention's website as input and outputs an xlsx file. The output file organizes the data into tables and creates a graphical chart to help visualize the information.</p>
 				</div>
 				<div class="column">
 					<a class="project-link" href="https://ethan-genser.github.io/Conways_Game_Of_Life/"><p>Conway's Game of Life</p></a>
